tests/js/invalid/scope/if-scope.buri
item = if #true do
    a = 3
    2

-- cannot use a variable after it has gone out of scope
b = a